--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>NJ - Home</title>
+    <title>NJ - About</title>
 
     <style>
 
@@ -20,7 +20,8 @@
 
 <body>
     <center><h1>Nika Jighauri</h1></center>
-    <center><h>Home</h></center>
-    <center><a href="downloads.html">Downloads</a>   <a href="about.html">About</a></center>
-    <p>hello world</p>
+    <center><h>About</h></center>
+    <center><a href="index.html">Home</a>   <a href="downloads.html">Downloads</a></center>
+    <h3>Updates:</h3>
+    <p>6/18/2024: Made website</p>
 </body>
