--- a/downloads.html
+++ b/downloads.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>NJ - Home</title>
+    <title>NJ - Downloads</title>
 
     <style>
 
@@ -20,7 +20,7 @@
 
 <body>
     <center><h1>Nika Jighauri</h1></center>
-    <center><h>Home</h></center>
-    <center><a href="downloads.html">Downloads</a>   <a href="about.html">About</a></center>
-    <p>hello world</p>
+    <center><h>Downloads</h></center>
+    <center><a href="index.html">Home</a>  <a href="about.html">About</a></center>
+    <a href="driverdownloads.html">Drivers</a>
 </body>
