--- a/downloads.html
+++ b/downloads.html
@@ -23,4 +23,5 @@
     <center><h>Downloads</h></center>
     <center><a href="index.html">Home</a>  <a href="about.html">About</a></center>
     <a href="driverdownloads.html">Drivers</a>
+    <a href="https://github.com/nikajighauri1/nikajighauri1.github.io/raw/main/x360ce.zip">x360ce</a>
 </body>
