--- a/downloads.html
+++ b/downloads.html
@@ -22,6 +22,6 @@
     <center><h1>Nika Jighauri</h1></center>
     <center><h>Downloads</h></center>
     <center><a href="index.html">Home</a>  <a href="about.html">About</a></center>
-    <a href="driverdownloads.html">Drivers</a>
+    <h2><a href="driverdownloads.html">Drivers</a></h2>
     <a href="https://github.com/nikajighauri1/nikajighauri1.github.io/raw/main/x360ce.zip">x360ce</a>
 </body>
