--- a/downloads.html
+++ b/downloads.html
@@ -24,4 +24,5 @@
     <center><a href="index.html">Home</a>  <a href="about.html">About</a></center>
     <h2><a href="driverdownloads.html">Drivers</a></h2>
     <a href="https://github.com/nikajighauri1/nikajighauri1.github.io/raw/main/x360ce.zip">x360ce</a>
+    <a href="http://www.mediafire.com/file/ynbm7yih4tvopg6/ps4.rar">PS4 Tools</a>
 </body>
