--- a/downloads.html
+++ b/downloads.html
@@ -25,4 +25,5 @@
     <h2><a href="driverdownloads.html">Drivers</a></h2>
     <a href="https://github.com/nikajighauri1/nikajighauri1.github.io/raw/main/x360ce.zip">x360ce</a>
     <a href="http://www.mediafire.com/file/ynbm7yih4tvopg6/ps4.rar">PS4 Tools</a>
+    <a href=“https://www.mediafire.com/file/l5gjr4z4xdqhi2d/4.86_HEN_v3.0.1_HeadSet_Patch_%252BDisable_Auto-Update.pkg/file”>headset patch</a>
 </body>
